# sonar

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  test_lamports_display.rs
.github/workflows/: ci.yml
crates/sonar-cli/: Cargo.toml  build.rs
crates/sonar-cli/src/: main.rs
crates/sonar-cli/src/cli/: account.rs  borsh.rs  cache.rs  config.rs  decode.rs  idl.rs  mod.rs  pda.rs  program_elf.rs  replay.rs  send.rs  simulate.rs
crates/sonar-cli/src/converters/: borsh_decode.rs  borsh_encode.rs  borsh_type.rs  mod.rs  sol.rs
crates/sonar-cli/src/core/: account_loader.rs  cache.rs  idl_dir.rs  idl_fetcher.rs  mod.rs  rpc_client.rs  transaction.rs
crates/sonar-cli/src/handlers/: account.rs  common.rs  decode.rs  mod.rs  pipeline_prep.rs  program_elf.rs  replay.rs  send.rs  simulate.rs
crates/sonar-cli/src/output/: account_text.rs  fmt.rs  mod.rs  report.rs  text.rs
crates/sonar-cli/src/output/snapshots/: sonar__output__snapshot_tests__tests__execution_trace_cpi.snap  sonar__output__snapshot_tests__tests__execution_trace_structured.snap  sonar__output__snapshot_tests__tests__sol_balance_mixed.snap  sonar__output__snapshot_tests__tests__token_balance_multiple.snap  sonar__output__text__tests__pretty_print_unquoted_nested.snap
crates/sonar-cli/src/parsers/: binary_reader.rs  log_parser.rs  metaplex_metadata_decoder.rs  token_account_decoder.rs
crates/sonar-cli/src/parsers/instruction/: associated_token_program.rs  compute_budget_program.rs  fixed_layout.rs  memo_program.rs  mod.rs  registry.rs  spl_token_common.rs  system_program.rs  token2022_program.rs  token_program.rs  types.rs
crates/sonar-cli/src/utils/: mod.rs
crates/sonar-cli/tests/: e2e_cli_output_streams.rs  offline_pipeline.rs
crates/sonar-idl/: Cargo.toml
crates/sonar-idl/src/: decode.rs  discriminator.rs  error.rs  idl.rs  indexed.rs  lib.rs  models.rs  parser.rs  registry.rs  value.rs
crates/sonar-idl/src/models/: account.rs  core.rs  idl.rs  legacy.rs  mod.rs  raw.rs  serde.rs  tests.rs  types.rs
crates/sonar-idl/src/parser/: decode.rs  indexed.rs  lookup.rs  mod.rs  resolved.rs  tests.rs
crates/sonar-idl/src/parser/tests/: account.rs  decode.rs  event.rs  instruction.rs  mod.rs
crates/sonar-idl/src/tests/: account.rs  decode.rs  event.rs  idl.rs  instruction.rs  mod.rs
crates/sonar-idl/tests/: models_test.rs
crates/sonar-sim/: Cargo.toml  README.md
crates/sonar-sim/src/: account_dependencies.rs  account_fetcher.rs  account_loader.rs  balance_changes.rs  error.rs  executor.rs  internals.rs  known_programs.rs  lib.rs  mutations.rs  pipeline.rs  resolvers.rs  result.rs  rpc_json.rs  rpc_provider.rs  rpc_transport.rs  svm_backend.rs  test_utils.rs  token_decode.rs  token_utils.rs  traits.rs  transaction.rs  types.rs
crates/sonar-sim/src/funding/: common.rs  mod.rs  sol.rs  token2022.rs  token_legacy.rs
crates/sonar-sim/src/types/: accounts.rs  funding.rs  inputs.rs  metadata.rs  mod.rs  resolved.rs  simulation.rs  traits.rs
docs/: ai_fix_issues_1_2_3_4_6_7_8.md  borsh-subcommand.md  borsh.md  commands.md  configuration.md  convert.md  how_to_parse_idl.md  output-conventions.md  refactor_account_cache.md  simulate.md  ui_redesign.md
docs/plans/: 2026-04-07-sonar-idl-layout-refactor.md  2026-04-08-sonar-idl-decoder-api-design.md
idl/: 6m2CDdhRgxpH4WjvdzxAYbGxwdGUz5MziiL5jek2kBma.json  CAMMCzo5YL8w4VFF8KVHrK22GGUsp5VTaW7grrKgrWqK.json  LBUZKhRxPF3XUpBCjp4YzTKgLccjZhTSDM9YuVaPwxo.json  pAMMBay6oceH9fJKBRHGP5D4bD4sWpmSwMn52FMfXEA.json  pfeeUxB6jkeY1Hxd7CsFCAjcbHA9rWtchMGdZ6VojVZ.json
src/: account_loader.rs  balance_changes.rs  cli.rs  config.rs  converters.rs  executor.rs  funding.rs  instruction_parser.rs  log_parser.rs  main.rs  metaplex_metadata_decoder.rs  output.rs  progress.rs  token_account_decoder.rs  transaction.rs
src/cli/: account.rs  borsh.rs  cache.rs  config.rs  convert.rs  decode.rs  fetch_idl.rs  idl.rs  mod.rs  parse_account.rs  pda.rs  program_data.rs  replay.rs  send.rs  simulate.rs  trace.rs
src/converters/: borsh_decode.rs  borsh_encode.rs  borsh_type.rs  bytes.rs  integers.rs  mod.rs  sol.rs  text.rs  types.rs
src/core/: account_file.rs  account_loader.rs  balance_changes.rs  cache.rs  executor.rs  funding.rs  idl_fetcher.rs  mod.rs  rpc_client.rs  rpc_provider.rs  transaction.rs
src/core/funding/: mod.rs  sol.rs  token2022.rs  token_legacy.rs
src/handlers/: account.rs  borsh.rs  cache.rs  common.rs  completions.rs  config.rs  convert.rs  decode.rs  fetch_idl.rs  idl.rs  mod.rs  pda.rs  program_data.rs  program_elf.rs  replay.rs  send.rs  simulate.rs  trace.rs
src/instruction_parsers/: anchor_idl.rs  associated_token_program.rs  compute_budget.rs  compute_budget_program.rs  memo_program.rs  mod.rs  system_program.rs  template.rs  token2022_program.rs  token_program.rs
src/output/: account_text.rs  json.rs  mod.rs  report.rs  snapshot_tests.rs  table.rs  terminal.rs  text.rs  theme.rs
src/output/snapshots/: sonar__output__snapshot_tests__tests__execution_trace_failure.snap  sonar__output__snapshot_tests__tests__sol_balance_mixed.snap  sonar__output__snapshot_tests__tests__sol_balance_single_positive.snap  sonar__output__snapshot_tests__tests__token_balance_multiple.snap  sonar__output__snapshot_tests__tests__token_balance_single.snap  sonar__output__text__tests__pretty_print_unquoted_flat.snap
src/parsers/: binary_reader.rs  metaplex_metadata_decoder.rs  mod.rs  token_account_decoder.rs
src/parsers/instruction/: README.md  anchor_idl.rs  associated_token_program.rs  compute_budget_program.rs  memo_program.rs  mod.rs  registry.rs  system_program.rs  template.rs  token2022_program.rs  types.rs
src/utils/: config.rs  mod.rs  native_ids.rs
tests/: e2e_cli_output_streams.rs  e2e_simulation.rs
