[workspace]
members = [".", "crates/sonar-sim", "crates/sonar-idl"]

[workspace.package]
rust-version = "1.86.0"

[package]
name = "sonar"
version = "0.3.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
sonar-idl = { path = "crates/sonar-idl" }
sonar-sim = { path = "crates/sonar-sim" }
anyhow = "1.0"
base64 = "0.22"
bs58 = "0.5"
bincode = "1.3"
clap = { version = "4.5.51", features = ["derive", "env"] }
clap_complete = "4"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
solana-account = "3.0"
solana-clock = "3.0"
solana-epoch-schedule = "3.0"
solana-hash = "3.0"
solana-nonce = "3.0"
solana-pubkey = "3.0"
solana-keypair = "3.0"
solana-transaction = "3.0"
solana-transaction-status-client-types = { version = "3.0", features = ["agave-unstable-api"] }
ureq = { version = "3", features = ["json"] }
solana-message = "3.0"
solana-address-lookup-table-interface = "3.0"
solana-commitment-config = "3.0"
solana-slot-hashes = "3.0"
solana-loader-v3-interface = "6.1.0"
solana-rent = "3.0"
solana-sdk-ids = "3.0"
solana-sysvar-id = "3.0"
solana-signature = "3.0"
solana-signer = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
hex = "0.4"
colored = "2.1"
spl-token = "9.0.0"
spl-token-2022 = "10.0.0"
sha2 = "0.10.9"
flate2 = "1.0"
indicatif = "0.17"
num-bigint = "0.4"
spl-pod = "0.7.1"
spl-token-metadata-interface = "0.8.0"
spl-token-group-interface = "0.7.1"
toml = "0.9.12"
terminal_size = "0.4"
unicode-width = "0.2.2"
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.42"
serde_json = "1.0"
tempfile = "3.26.0"
