[workspace]
members = ["crates/sonar-cli", "crates/sonar-sim", "crates/sonar-idl"]
default-members = ["crates/sonar-cli"]
resolver = "2"

[workspace.package]
rust-version = "1.86.0"

[workspace.dependencies]
sonar-idl = { path = "crates/sonar-idl" }
sonar-sim = { path = "crates/sonar-sim" }
anyhow = "1.0"
assert_cmd = "2.0"
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
clap_complete = "4"
colored = "2.1"
env_logger = "0.11"
flate2 = "1.0"
heck = "0.5"
hex = "0.4"
indicatif = "0.17"
insta = "1.42"
litesvm = "0.10.0"
log = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
sha2 = "0.10.9"
solana-account = "3.0"
solana-address-lookup-table-interface = "3.0"
solana-clock = "3.0"
solana-commitment-config = "3.0"
solana-epoch-schedule = "3.0"
solana-hash = "3.0"
solana-keypair = "3.0"
solana-loader-v3-interface = "6.1.0"
solana-message = "3.0"
solana-native-token = "3.0"
solana-nonce = "3.0"
solana-pubkey = "3.0"
solana-rent = "3.0"
solana-sdk-ids = "3.0"
solana-signature = "3.0"
solana-signer = "3.0"
solana-slot-hashes = "3.0"
solana-sysvar-id = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
solana-transaction = "3.0"
solana-transaction-status-client-types = { version = "3.0", features = ["agave-unstable-api"] }
spl-pod = "0.7.1"
spl-token = "9.0.0"
spl-token-2022 = "10.0.0"
spl-token-group-interface = "0.7.1"
spl-token-metadata-interface = "0.8.0"
tempfile = "3.26.0"
terminal_size = "0.4"
thiserror = "2.0.18"
toml = "0.9.12"
unicode-width = "0.2.2"
ureq = { version = "3", features = ["json"] }
