[package]
name = "sonar-idl"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Anchor IDL parsing and type resolution for Solana programs"

[dependencies]
anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10.9"
solana-pubkey = "3.0"
