[package]
name = "sonar-idl"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Anchor IDL parsing and type resolution for Solana programs"

[dependencies]
anyhow.workspace = true
heck.workspace = true
hex.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
solana-pubkey.workspace = true
