[package]
name = "sonar-sim"
version = "0.1.0"
edition = "2021"
description = "Solana transaction simulation engine powered by LiteSVM"

[dependencies]
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Simulation engine
litesvm = "0.8.1"

# Solana SDK
solana-account = "3.0"
solana-address-lookup-table-interface = "3.0"
solana-client = "3.0"
solana-clock = "3.0"
solana-hash = "3.0"
solana-loader-v3-interface = "6.1.0"
solana-message = "3.0"
solana-native-token = "3.0"
solana-pubkey = "3.0"
solana-sdk-ids = "3.0"
solana-signature = "3.0"
solana-slot-hashes = "3.0"
solana-sysvar-id = "3.0"
solana-transaction = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }

# SPL Token (funding + balance_changes + account_loader)
spl-token = "9.0.0"
spl-token-2022 = "10.0.0"
thiserror = "2.0.18"

[dev-dependencies]
solana-keypair = "3.0"
solana-signer = "3.0"
