[package]
name = "sonar-sim"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Solana transaction simulation engine powered by LiteSVM"

[dependencies]
base64.workspace = true
bincode.workspace = true
bs58.workspace = true
log.workspace = true
serde.workspace = true

# Simulation engine
litesvm.workspace = true

# Solana SDK
solana-account.workspace = true
solana-address-lookup-table-interface.workspace = true
serde_json.workspace = true
ureq.workspace = true
solana-clock.workspace = true
solana-hash.workspace = true
solana-loader-v3-interface.workspace = true
solana-message.workspace = true
solana-native-token.workspace = true
solana-pubkey.workspace = true
solana-rent.workspace = true
solana-sdk-ids.workspace = true
solana-signature.workspace = true
solana-slot-hashes.workspace = true
solana-sysvar-id.workspace = true
solana-transaction.workspace = true
solana-system-interface.workspace = true

# SPL Token (funding + balance_changes + account_loader)
spl-token.workspace = true
spl-token-2022.workspace = true
thiserror.workspace = true

[dev-dependencies]
solana-keypair.workspace = true
solana-signer.workspace = true
